Fix overflowing to new line

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,3 +1,7 @@
+.fullWidth {
+    width: 100vw;
+}
+
 .mainMenu {
     padding: 2vw;
     width: 50vw;
@@ -71,5 +75,5 @@
     margin: 0;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%)
+    transform: translate(-50%, -50%);
 }
